--- a/NEWS.org
+++ b/NEWS.org
@@ -1,3 +1,5 @@
+* v0.9.0 -- <2021-02-28 Sun>
+** Properly handle the opening of files (using =with=)
 * v0.8.0 -- <2021-02-27 Sat>
 ** Fix padding issue when the number of days until duedate has multiple digits
 ** Use the =string.format= method when printing lines
