--- a/NEWS.org
+++ b/NEWS.org
@@ -1,3 +1,5 @@
+* v0.10.0 -- <2021-03-02 Tue>
+** Move all "colorizing" functionality into =utils.colorize=
 * v0.9.0 -- <2021-02-28 Sun>
 ** Properly handle the opening of files (using =with=)
 * v0.8.0 -- <2021-02-27 Sat>
